# elias_kento_embarcatech_HBr_2025

./: README.md
projetos/RP2040_temperature/: CMakeLists.txt  RP2040_temperature.c
projetos/RP2040_temperatureUnity/: CMakeLists.txt
projetos/RP2040_temperatureUnity/include/: adc_temp.h
projetos/RP2040_temperatureUnity/src/: CMakeLists.txt  adc_temp.c
projetos/RP2040_temperatureUnity/test/: CMakeLists.txt  test_adc.c
projetos/built_in_LED/: CMakeLists.txt
projetos/built_in_LED/app/: main.c
projetos/built_in_LED/drivers/: led_embutido.c
projetos/built_in_LED/hal/: hal_led.c
projetos/built_in_LED/include/: hal_led.h  led_embutido.h
projetos/fade_LED/: CMakeLists.txt  fade_LED.c
projetos/galton_board/: CMakeLists.txt  Projeto 1 - Galton Board Digital com BitDogLab.docx  main.c
projetos/galton_board/src/: ssd1306.c
projetos/interrupt_counter/: CMakeLists.txt  Readme.md  interrupt_counter.c
projetos/joystick_read/: CMakeLists.txt  Readme.md  joystick_read.c
projetos/temp/teste/: CMakeLists.txt  teste.c
